--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.9"
 dependencies = [
+    "opencv-python>=4.12.0.88",
     "polars>=1.33.0",
 ]
