--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.9"
 dependencies = [
+    "countryinfo>=0.1.2",
     "opencv-python>=4.12.0.88",
     "polars>=1.33.0",
 ]
