--- a/default.config
+++ b/default.config
@@ -1,16 +1,11 @@
-# default.config
-
-# Directories
-video_dir = "videos"          # Folder where the MP4 videos are stored
-bbox_dir = "data/bbox"        # Folder containing YOLO CSV annotations
-results_dir = "results"       # Folder to save extracted frames
-mapping_csv = "mapping.csv"   # Path to the mapping CSV
-
-# Frame extraction thresholds
-min_persons = 3               # Minimum persons per frame
-min_cars = 5                  # Minimum cars per frame
-min_lights = 1                # Minimum traffic lights per frame
-max_frames = 3                # Maximum frames to extract per video
-
-# Other options
-verbose = True                # Set to True to enable detailed logging
+{
+"video_dir": "videos",
+"bbox_dir": "data/bbox",
+"results_dir": "results",
+"mapping_csv": "mapping.csv",
+"min_persons": 3,
+"min_cars": 5,
+"min_lights": 1,
+"max_frames": 3,
+"verbose": true
+}
