--- a/default.config
+++ b/default.config
@@ -1,11 +1,11 @@
 {
-"video_dir": "videos",
-"bbox_dir": "data/bbox",
-"results_dir": "results",
-"mapping_csv": "mapping.csv",
-"min_persons": 3,
-"min_cars": 5,
-"min_lights": 1,
-"max_frames": 3,
-"verbose": true
+  "CITY_NAME": "YourCityName",
+  "video_dirs": ["<path_to_video_folders>"],
+  "BBOX_DIR": "<path_to_yolo_csvs>",
+  "SAVE_DIR": "<path_to_save_frames>",
+  "MIN_PERSONS": 3,
+  "MIN_CARS": 5,
+  "MIN_LIGHTS": 1,
+  "MAX_FRAMES": 3,
+  "VERBOSE": true
 }
