added docstring and comments

--- a/default.config
+++ b/default.config
@@ -2,6 +2,7 @@
   "video_dirs": ["<path_to_video_folders>"],
   "BBOX_DIR": "<path_to_yolo_csvs>",
   "SAVE_DIR": "<path_to_save_frames>",
+  "mapping": "mapping.csv",
   "MIN_PERSONS": 3,
   "MIN_CARS": 5,
   "MIN_LIGHTS": 1,
