included interval time in config file

--- a/default.config
+++ b/default.config
@@ -3,6 +3,7 @@
   "BBOX_DIR": "<path_to_yolo_csvs>",
   "SAVE_DIR": "<path_to_save_frames>",
   "mapping": "mapping.csv",
+  "frame_interval": 600,
   "MIN_PERSONS": 3,
   "MIN_CARS": 5,
   "MIN_LIGHTS": 1,
